--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 <p>Typically, a lens is used to focus the light reflected or emitted from objects into a real image on the light-sensitive surface inside a camera during a timed exposure. With an electronic image sensor, this produces an electrical charge at each pixel, which is electronically processed and stored in a digital image file for subsequent display or processing. The result with photographic emulsion is an invisible latent image, which is later chemically "developed" into a visible image, either negative or positive depending on the purpose of the photographic material and the method of processing. A negative image on film is traditionally used to photographically create a positive image on a paper base, known as a print, either by using an enlarger or by contact printing.
 </p>
 
-<img src="historypageimages/photoofthemoon.jpg" alt="Photograph of the Moon" class="center">
+<img src="images/photoofthemoon.jpg" alt="Photograph of the Moon" class="center">
 <h2 class="center-screen">The Evolution Of Photography</h2>
 <p>It started with a box until about 190 years ago when Joseph Nicephore Niepce produced what is believed to be the oldest surviving photograph from a window of his estate in Le Gras in the Burgundy region of France. We’ll talk more about Joe in just a little bit. However, the beginnings of photography reach back further than that… much, much, much further back. We’re talking about an entirely different millennium.</p>
 <p>Let’s stop here for just a moment in order to admit that as with many monumental discoveries and inventions there are protestations and controversies surrounding some of the events that will be recounted here. Still, I will always do everything I can to at least mention all involved parties in order to give credit where it is most certainly due.</p>
 <p> It all most likely began in China with an alarmingly simple apparatus called the “camera obscura”. It’s name is derived from Latin which means “dark chamber” (how great is that?) and we can trace back references to this device as as the fourth century BCE. A camera obscura is a box of virtually any size which has a hole of small diameter in one side which allows light to pass. The light then casts itself on the inside of the box thus making an inverted image.</p>
 
-<img src="historypageimages/firstselfie.jpg" alt="The First Selfie" class="center">
+<img src="images/firstselfie.jpg" alt="The First Selfie" class="center">
 
 
 
