--- a/photographers.html
+++ b/photographers.html
@@ -30,7 +30,7 @@
 He worked closely to Walker Evans and became one of the world’s most famous street photographers.</p>
 <p> He completed his visuals with text, written straight onto the negatives and prints.</p>
 
-<img src="artistpageimages/robertfrank2.jpg" alt="Robert Frank"class="center">
+<img src="images/robertfrank2.jpg" alt="Robert Frank"class="center">
 
 
 <h2>Graciela Iturbide
@@ -39,7 +39,7 @@ Biography</h2>
 
  <p>Iturbide's exquisite high-contrast black-and-white prints convey the starkness of life for many of her subjects. Traveling through Mexico, Ecuador, Venezuela, Panama, and the Mexican community of East Los Angeles, Iturbide documents the uneasy cohabitation of ancient cultural rituals and contemporary adaptations and interpretations. One of her particular interests has been the role of women, and since 1979 she has photographed the Zapotec Indians of Juchitán, Oaxaca, among whom women are commonly accorded places of power, and stereotypical gender roles are frequently subverted. Iturbide uses photography to try to understand Mexico in its totality, as a combination of indigenous practices, and imported and assimilated Catholic religious practices, and foreign economic trade. Meredith Fisher Handy et al. Reflections in a Glass Eye: Works from the International Center of Photography Collection, New York: Bulfinch Press in association with the International Center of Photography, 1999, p. 219.</p>
 
-<img src="artistpageimages/iturbide_graciela3.jpg" alt="Iturbide Graciela"class="center">
+<img src="images/iturbide_graciela3.jpg" alt="Iturbide Graciela"class="center">
 
 
 <h2>The Cemetary</h2>
